fixed overflow scrolling bug

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,7 +11,7 @@ Styling rules for the main single-page site header
 */
 .Container {
     max-width: 100vw;
-    width: 100%;
+    width: 100vw;
     padding: 0;
     display: flex;
     flex-flow: row nowrap;
