--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -24,7 +24,7 @@
     bottom: 0;
     left: 0;
     height: auto;
-    width: 100%;
+    width: 100vw;
 }
 .IntroTitle {
     font-size: 4.5rem;
