--- a/src/modules/layout.module.css
+++ b/src/modules/layout.module.css
@@ -12,6 +12,7 @@ Main layout component styling rules
 .Layout {
     min-height: 100vh;
     max-width: 100vw;
+    width: 100vw;
     margin: 0;
     padding: 0;
     display: flex;
